# moe

./: .gitignore  LICENSE  README.md  modeling_bert_with_moe.py  requirements.txt  setup.cfg
moe/models/bert/: modeling_bert_with_moe.py
notebooks/: bert.ipynb  bert_finetunnig.ipynb  bert_with_moe.ipynb
src/models/bert/: modeling_bert.py  modeling_bert_with_moe.py
