[metadata]
name = moe
version = attr: moe.__version__
author = 'Maidari Tsydenov'
description = Testing BERT-like models with Mixture of Experts
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

python_requires = >=3.11
install_requires =
    huggingface-hub==0.32.0
    numpy>=2.2.6
    pandas==2.2.3
    scikit-learn==1.6.1
    torch>=2.7.0
    transformers==4.51.2
    wandb==0.19.7


[options.packages.find]
include = moe*
exclude = tests*

[options.package_data]
* =

[options.extras_require]
tests =
    pytest>=8.2.1
    black>=24.4.2
    notebook>=6.5.7,<7
